--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,7 @@ section div:first-child
     float: left;
     width:480px;
     margin-right: 30px;
+    margin-bottom: 30px;
 }
 
 section div:last-child
@@ -62,6 +63,7 @@ section div:last-child
     padding-left: 50px;
     margin-left: 30px;
     padding-right: 20px;
+    margin-bottom: 30px;
 }
 section
 {
@@ -75,6 +77,7 @@ footer
     height: 100px;
     background-color: grey;
     margin-top: 30px;
+    padding: 30px;
 }
 p{
     display: block;
