--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 {
     display: inline-block;
     margin-right: 30px;
-    background-color: greenyellow;
+    
     
 }
 header nav {
@@ -17,9 +17,8 @@ header nav {
   
   header nav ul li {
     display: inline-block;
-    margin-left: 35px;
+    margin-left: 50px;
     vertical-align: middle;
-    border: 3px solid red;
   }
   nav ul li a {
     
@@ -34,8 +33,10 @@ header nav {
 body{
    
     font-family: Arial, Helvetica, sans-serif;
+    vertical-align: middle;
+    max-width: 80%;
+    margin: auto;
     padding: 10px;
-    align-items: center;
     position: relative;
 
       
@@ -64,7 +65,7 @@ section div:last-child
     margin-left: 30px;
     padding-right: 20px;
     margin-bottom: 30px;
-    background-color: hotpink;
+    
 }
 section
 {
